--- a/index.html
+++ b/index.html
@@ -10,3 +10,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  html,body {
+    margin:0;
+    padding:0;
+  }
+</style>
