Started message list as an accordion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <script src="/plugins/leaflet-tilelayer-mask-master/leaflet-tilelayer-mask.js"></script> -->
   </body>
 </html>
 
