fixed center button in map

--- a/index.html
+++ b/index.html
@@ -21,4 +21,15 @@
   body{
     position: relative;
   }
+
+  .easy-button-button {
+    border: none;
+    padding: 6px;
+    background-color: #fff;
+  }
+
+.easy-button-button:hover {
+  background-color: #f2f2f2;
+}
+
 </style>
